Add MACOSX Build (#52)

--- a/cpp/cmake/qdkConfig.cmake.in
+++ b/cpp/cmake/qdkConfig.cmake.in
@@ -7,6 +7,7 @@ set(QDK_CHEMISTRY_ENABLE_GPU "@QDK_CHEMISTRY_ENABLE_GPU@" CACHE BOOL "Enable QDK
 set(QDK_CHEMISTRY_ENABLE_HGP "@QDK_CHEMISTRY_ENABLE_HGP@" CACHE BOOL "Enable HGP Bindings" FORCE)
 set(QDK_CHEMISTRY_ENABLE_LIBINTX "@QDK_CHEMISTRY_ENABLE_LIBINTX@" CACHE BOOL "Enable LIBINTX Bindings" FORCE)
 set(QDK_CHEMISTRY_ENABLE_MPI "@QDK_CHEMISTRY_ENABLE_MPI@" CACHE BOOL "Enable MPI Bindings" FORCE)
+set(QDK_ENABLE_OPENMP "@QDK_ENABLE_OPENMP@" CACHE BOOL "Enable OpenMP Bindings" FORCE)
 set(QDK_CHEMISTRY_ENABLE_PCM "@QDK_CHEMISTRY_ENABLE_PCM@" CACHE BOOL "Enable PCM Bindings" FORCE)
 set(QDK_CHEMISTRY_ENABLE_DFTD3 "@QDK_CHEMISTRY_ENABLE_DFTD3@" CACHE BOOL "Enable DFTD3 Bindings" FORCE)
 
