--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -15,7 +15,20 @@ if(CCACHE_EXECUTABLE AND NOT CMAKE_CXX_COMPILER_LAUNCHER)
 endif()
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON CACHE BOOL "Enable PIC for all targets" FORCE)
+set(CMAKE_MACOSX_RPATH ON CACHE BOOL "Enable RPATH on macOS" FORCE)
 
+# Custom CMake Find* modules for linear algebra dependencies
+include( FetchContent )
+FetchContent_Declare( linalg-cmake-modules
+  GIT_REPOSITORY https://github.com/wavefunction91/linalg-cmake-modules.git
+  GIT_TAG        main
+)
+FetchContent_GetProperties( linalg-cmake-modules )
+if( NOT linalg-cmake-modules_POPULATED )
+  FetchContent_Populate( linalg-cmake-modules )
+endif()
+
+# list( APPEND CMAKE_MODULE_PATH ${linalg-cmake-modules_SOURCE_DIR} )
 # First try to find an installed qdk library
 find_package(qdk QUIET COMPONENTS chemistry)
 
