Add sobolevnrm to pipelines review (#215)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,7 +5,7 @@
 * @sobolevnrm @wavefunction91 @nabbelbabbel
 
 # Pipelines
-/.pipelines/ @wavefunction91 @nabbelbabbel @v-georgen
+/.pipelines/ @wavefunction91 @nabbelbabbel @v-georgen @sobolevnrm
 
 # Samples
 /examples/ @sobolevnrm @wavefunction91 @nabbelbabbel @ConradJohnston
